templates/subshell-technology-radar_template.yaml
---
# Source: subshell-technology-radar/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-subshell-technology-radar
  labels:
    helm.sh/chart: subshell-technology-radar-1.0.0
    app.kubernetes.io/name: subshell-technology-radar
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
    null
spec:
  type: 
  
  
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: subshell-technology-radar
    app.kubernetes.io/instance: release-name
---
# Source: subshell-technology-radar/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-subshell-technology-radar
  labels:
    helm.sh/chart: subshell-technology-radar-1.0.0
    app.kubernetes.io/name: subshell-technology-radar
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: subshell-technology-radar
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: subshell-technology-radar
        app.kubernetes.io/instance: release-name
    spec:
      containers:
        - name: subshell-technology-radar
          securityContext:
            null
          image: "docker.subshell.com/tools/subshell-technology-radar:master"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
# Source: subshell-technology-radar/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-subshell-technology-radar
  labels:
    helm.sh/chart: subshell-technology-radar-1.0.0
    app.kubernetes.io/name: subshell-technology-radar
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
